tests/spec/emit/snapshots/static_method_as_value.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Box { x: int }
  
  impl Box {
    fn new(x: int) -> Box { Box { x } }
  }
  
  fn main() {
    let f = Box.new
    let _ = f(1)
  }
---
package main

type Box struct {
	x int
}

func Box_new(x int) Box {
	return Box{x: x}
}

func main() {
	f := Box_new
	f(1)
}
