tests/spec/emit/snapshots/static_method_call.snap
---
source: tests/spec/emit/functions.rs
description: "input: \nstruct Point { x: int, y: int }\n\nimpl Point {\n  fn new(x: int, y: int) -> Point {\n    Point { x: x, y: y }\n  }\n}\n\nfn main() -> int {\n  let p = Point.new(1, 2);\n  p.x\n}\n"
---
package main

type Point struct {
	x int
	y int
}

func Point_new(x, y int) Point {
	return Point{
		x: x,
		y: y,
	}
}

func main() int {
	p := Point_new(1, 2)
	return p.x
}
