tests/spec/emit/snapshots/static_method_returning_channel_not_hijacked.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Foo { ch: Channel<int> }\n\nimpl Foo {\n  fn new() -> Channel<int> {\n    Channel.new<int>()\n  }\n}\n\nfn test() -> Channel<int> {\n  Foo.new()\n}\n"
---
package main

type Foo struct {
	ch chan int
}

func Foo_new() chan int {
	return make(chan int)
}

func test() chan int {
	return Foo_new()
}
