tests/spec/emit/snapshots/string_byte_at.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: string, i: int) -> byte {
    s.byte_at(i)
  }
---
package main

func test(s string, i int) byte {
	return s[i]
}
