tests/spec/emit/snapshots/string_bytes.snap
---
source: tests/spec/emit/prelude.rs
description: "input: \nfn test(s: string) -> Slice<byte> {\n  s.bytes()\n}\n"
---
package main

func test(s string) []byte {
	return []byte(s)
}
