tests/spec/emit/snapshots/string_contains.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: string, sub: string) -> bool {
    s.contains(sub)
  }
---
package main

import "strings"

func test(s, sub string) bool {
	return strings.Contains(s, sub)
}
