tests/spec/emit/snapshots/string_is_empty.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: string) -> bool {
    s.is_empty()
  }
---
package main

func test(s string) bool {
	return len(s) == 0
}
