tests/spec/emit/snapshots/string_length.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: string) -> int {
    s.length()
  }
---
package main

func test(s string) int {
	return len(s)
}
