tests/spec/emit/snapshots/string_literal.snap
---
source: tests/spec/emit/literals.rs
description: "input: \nfn test() {\n  \"hello world\"\n}\n"
---
package main

func test() {}
